force-app/main/default/objects/Opportunity/fields/Offtake_Type__c.field-meta.xml
<CustomField>
    <fullName>Offtake_Type__c</fullName>
    <label>Offtake Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS Only</fullName>
            </value>
            <value>
                <fullName>Large Anchor Only</fullName>
            </value>
            <value>
                <fullName>Small Anchor Only</fullName>
            </value>
            <value>
                <fullName>CS and Anchor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>