force-app/main/default/objects/Opportunity/fields/Old_History__c.field-meta.xml
<CustomField>
    <fullName>Old_History__c</fullName>
    <label>Old History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>