force-app/main/default/objects/Opportunity/fields/Opportunity_Address__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Address__c</fullName>
    <label>Opportunity Address</label>
    <type>TextArea</type>
</CustomField>