force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <label>Opportunity Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>