force-app/main/default/objects/Opportunity/fields/Opportunity_Number_of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number_of_Applicants__c</fullName>
    <formula>if( OR(Application_Type__c = &quot;Individual&quot;,Application_Type__c = &quot;Individually&quot;),1,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Number of Applicants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>