force-app/main/default/objects/Opportunity/fields/Opportunity_Order__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Order__c</fullName>
    <label>Opportunity Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>