force-app/main/default/objects/Opportunity/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>