force-app/main/default/objects/Opportunity/fields/Panel_Type__c.field-meta.xml
<CustomField>
    <fullName>Panel_Type__c</fullName>
    <label>Panel Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>