force-app/main/default/objects/Opportunity/fields/Parcel_ZIp__c.field-meta.xml
<CustomField>
    <fullName>Parcel_ZIp__c</fullName>
    <label>Service Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>