force-app/main/default/objects/Opportunity/fields/Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_ID__c</fullName>
    <formula>CASESAFEID(Account.Parent_Account__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account ID</label>
    <type>Text</type>
</CustomField>