force-app/main/default/objects/Opportunity/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates Opportunities to the Partner Account. Note that this is different from the Partner Object.</description>
    <inlineHelpText>Relates Opportunities to the Partner Account. Note that this is different from the Partner Object.</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Partner Account)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>