force-app/main/default/objects/Opportunity/fields/Partner_Additional_Email_2_of_2__c.field-meta.xml
<CustomField>
    <fullName>Partner_Additional_Email_2_of_2__c</fullName>
    <label>Partner Additional Email (2 of 2)</label>
    <type>Email</type>
</CustomField>