force-app/main/default/objects/Opportunity/fields/Partner_Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Additional_Email__c</fullName>
    <label>Partner Additional Email</label>
    <type>Email</type>
</CustomField>