force-app/main/default/objects/Opportunity/fields/Partner_Additional_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Partner_Additional_Email_Formula__c</fullName>
    <formula>Partner_tag_lookup__r.Additional_CC_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Additional Email Formula</label>
    <type>Text</type>
</CustomField>