force-app/main/default/objects/Opportunity/fields/Partner_Commission_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission_Invoice_Number__c</fullName>
    <inlineHelpText>Insert invoice number when sales partner sends us an invoice for paying commission and this customer is included in that invoice.</inlineHelpText>
    <label>Partner Commission Invoice #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>