force-app/main/default/objects/Opportunity/fields/Partner_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Partner_Email_2__c</fullName>
    <formula>Partner_tag_lookup__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that updates the email field via workflow</inlineHelpText>
    <label>Partner Email 2</label>
    <type>Text</type>
</CustomField>