force-app/main/default/objects/Opportunity/fields/Partner_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Partner_Email_3__c</fullName>
    <formula>Partner_tag_lookup__r.CC_Email_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Email 3</label>
    <type>Text</type>
</CustomField>