force-app/main/default/objects/Opportunity/fields/Partner_Sales_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Agreement_Status__c</fullName>
    <inlineHelpText>This field shows the status of the partner&apos;s DocuSign Sales Agreement upload</inlineHelpText>
    <label>Partner Sales Agreement Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>