force-app/main/default/objects/Opportunity/fields/Partner_Stage__c.field-meta.xml
<CustomField>
    <fullName>Partner_Stage__c</fullName>
    <formula>IF( ISPICKVAL(StageName, &quot;Contract Pending&quot;), &quot;Customer Signature Required&quot;, TEXT(StageName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Stage</label>
    <type>Text</type>
</CustomField>