force-app/main/default/objects/Opportunity/fields/Partner_tag2__c.field-meta.xml
<CustomField>
    <fullName>Partner_tag2__c</fullName>
    <formula>Partner_tag_lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Name</label>
    <type>Text</type>
</CustomField>