force-app/main/default/objects/Opportunity/fields/Partner_tag_lookup__c.field-meta.xml
<CustomField>
    <fullName>Partner_tag_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>