force-app/main/default/objects/Opportunity/fields/Percent_of_Nameplate_MW_DC__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Nameplate_MW_DC__c</fullName>
    <label>Percent of Nameplate (MW DC)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>