force-app/main/default/objects/Opportunity/fields/Percent_offset_desired__c.field-meta.xml
<CustomField>
    <fullName>Percent_offset_desired__c</fullName>
    <label>Percent offset desired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>