force-app/main/default/objects/Opportunity/fields/Percentage_Federal_1__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Federal_1__c</fullName>
    <formula>IF(INCLUDES(Customer_Type__c, &quot;County&quot;),&quot;Error&quot;,

IF(INCLUDES(Customer_Type__c, &quot;Municipality&quot;),&quot;Error&quot;,

IF(INCLUDES(Customer_Type__c, &quot;Public School&quot;),&quot;Error&quot;,

IF(INCLUDES(Customer_Type__c, &quot;Private School&quot;),&quot;Error&quot;,

IF(INCLUDES(Customer_Type__c, &quot;MAPC&quot;),&quot;Error&quot;,

IF(INCLUDES(Customer_Type__c, &quot;MLP&quot;),&quot;Error&quot;,

IF(INCLUDES(Customer_Type__c, &quot;C&amp;I&quot;),&quot;Error&quot;,

IF(INCLUDES(Customer_Type__c, &quot;Private Affordable&quot;),&quot;Error&quot;,null))))))))</formula>
    <label>Percentage Federal 1</label>
    <type>Text</type>
</CustomField>