force-app/main/default/objects/Opportunity/fields/Percentage_Federal__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Federal__c</fullName>
    <label>Percentage Federal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>