force-app/main/default/objects/Opportunity/fields/Personal_Credit_Report2__c.field-meta.xml
<CustomField>
    <fullName>Personal_Credit_Report2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Credit Report</label>
    <referenceTo>LASERCA__Personal_Credit_Report__c</referenceTo>
    <relationshipLabel>Opportunities (Personal Credit Report)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>