force-app/main/default/objects/Opportunity/fields/Personal_Credit_Report_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Personal_Credit_Report_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Review personal credit report to confirm guarantor&apos;s credit report and report is complete.</inlineHelpText>
    <label>Personal Credit Report Reviewed</label>
    <type>Checkbox</type>
</CustomField>