force-app/main/default/objects/Opportunity/fields/Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One__c</fullName>
    <description>For Reporting. Do not delete.</description>
    <formula>1</formula>
    <inlineHelpText>For Reporting. Do not delete.</inlineHelpText>
    <label>Power of One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>