force-app/main/default/objects/Opportunity/fields/PPA_Specifics__c.field-meta.xml
<CustomField>
    <fullName>PPA_Specifics__c</fullName>
    <description>Description of any specific characteristics to the PPA. This could include a variable rate that doesn&apos;t follow a specific escalator, co-development fees, or other idiosyncrasies.</description>
    <inlineHelpText>Description of any specific characteristics to the PPA. This could include a variable rate that doesn&apos;t follow a specific escalator, co-development fees, or other idiosyncrasies.</inlineHelpText>
    <label>PPA Specifics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>