force-app/main/default/objects/Opportunity/fields/Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Type__c</fullName>
    <label>Price Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>NMCPA</fullName>
                
                
                    <label>NMCPA</label>
                
                </value>
            
                <value>
                
                    <fullName>PPA</fullName>
                
                
                    <label>PPA</label>
                
                </value>
            
                <value>
                
                    <fullName>Lease</fullName>
                
                
                    <label>Lease</label>
                
                </value>
            
                <value>
                
                    <fullName>PILOT</fullName>
                
                
                    <label>PILOT</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>