force-app/main/default/objects/Opportunity/fields/Product_Escalation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Product_Escalation_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related schedule at which this opportunity&apos;s product will change over time. If blank, the product fields will be used (no escalation)</inlineHelpText>
    <label>Product Escalation Schedule</label>
    <referenceTo>Product_Escalation_Schedule__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>