force-app/main/default/objects/Opportunity/fields/Product_Program__c.field-meta.xml
<CustomField>
    <fullName>Product_Program__c</fullName>
    <label>Product Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BlueWave Solar Loan</fullName>
            </value>
            <value>
                <fullName>MSLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>