force-app/main/default/objects/Opportunity/fields/Project_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Project_Assignment__c</fullName>
    <inlineHelpText>Would you like the System/Waitlist to be assigned Automatically or Manually. If Automatic, the assignment only occurs when a new record is created. The Customer is assigned to the System with the most available capacity in their Service Territory.</inlineHelpText>
    <label>System Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic - COD Date/Available Capacity</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic - Assignment Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>