force-app/main/default/objects/Opportunity/fields/Project_Class__c.field-meta.xml
<CustomField>
    <fullName>Project_Class__c</fullName>
    <formula>Shared_Solar_System__r.Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Class</label>
    <type>Text</type>
</CustomField>