force-app/main/default/objects/Opportunity/fields/project_identification_number__c.field-meta.xml
<CustomField>
    <fullName>project_identification_number__c</fullName>
    <label>Project Identification Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>