force-app/main/default/objects/Opportunity/fields/Ready_to_Reserve_MCEC_Funds__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Reserve_MCEC_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCEC Funds Reservation Requested</label>
    <type>Checkbox</type>
</CustomField>