force-app/main/default/objects/Opportunity/fields/Reason_for_Decline2__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Decline2__c</fullName>
    <label>Reason for Decline</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Not Interested</fullName>
                
                
                    <label>Not Interested</label>
                
                </value>
            
                <value>
                
                    <fullName>Problem with Contract</fullName>
                
                
                    <label>Problem with Contract</label>
                
                </value>
            
                <value>
                
                    <fullName>Looking for a Fixed Rate</fullName>
                
                
                    <label>Looking for a Fixed Rate</label>
                
                </value>
            
                <value>
                
                    <fullName>Going with another Company</fullName>
                
                
                    <label>Going with another Company</label>
                
                </value>
            
                <value>
                
                    <fullName>Looking for a Rooftop Installation</fullName>
                
                
                    <label>Looking for a Rooftop Installation</label>
                
                </value>
            
                <value>
                
                    <fullName>Subscription too Small</fullName>
                
                
                    <label>Subscription too Small</label>
                
                </value>
            
                <value>
                
                    <fullName>Poor Customer Service</fullName>
                
                
                    <label>Poor Customer Service</label>
                
                </value>
            
                <value>
                
                    <fullName>Other</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>