force-app/main/default/objects/Opportunity/fields/Reason_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Reason_Unqualified__c</fullName>
    <description>This is the reason a lead was unqualified. It&apos;s populated by the user who marks the lead as unqualified.</description>
    <inlineHelpText>This is the reason a lead was unqualified. It&apos;s populated by the user who marks the lead as unqualified.</inlineHelpText>
    <label>Reason Unqualified</label>
    <length>50</length>
    <type>Text</type>
</CustomField>