force-app/main/default/objects/Opportunity/fields/Referral_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Referral_Checkbox__c</fullName>
    <formula>IF(NOT(ISBLANK( Customer_Referral__c )), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Checkbox</label>
    <type>Checkbox</type>
</CustomField>