force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>VT</fullName>
            </value>
            <value>
                <fullName>NH</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>