force-app/main/default/objects/Opportunity/fields/Replacement_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replacement Capacity</label>
    <type>Checkbox</type>
</CustomField>