force-app/main/default/objects/Opportunity/fields/Reserved_System_Capacity_kW_DC2__c.field-meta.xml
<CustomField>
    <fullName>Reserved_System_Capacity_kW_DC2__c</fullName>
    <label>Reserved System Capacity (kW DC)</label>
    <length>11</length>
    <type>Text</type>
</CustomField>