force-app/main/default/objects/Opportunity/fields/Sales_Fee__c.field-meta.xml
<CustomField>
    <fullName>Sales_Fee__c</fullName>
    <label>Sales Fee</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>