force-app/main/default/objects/Opportunity/fields/Sales_Person_Tag__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Tag__c</fullName>
    <label>Sales Person Tag</label>
    <length>30</length>
    <type>Text</type>
</CustomField>