force-app/main/default/objects/Opportunity/fields/Sales_Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative_Email__c</fullName>
    <formula>BS_Sales_ID__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Representative Email</label>
    <type>Text</type>
</CustomField>