force-app/main/default/objects/Opportunity/fields/Sales_Representative_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative_ID__c</fullName>
    <formula>BS_Sales_ID__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Representative ID</label>
    <type>Text</type>
</CustomField>