force-app/main/default/objects/Opportunity/fields/Sales_tag__c.field-meta.xml
<CustomField>
    <fullName>Sales_tag__c</fullName>
    <formula>BS_Sales_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Person Name</label>
    <type>Text</type>
</CustomField>