force-app/main/default/objects/Opportunity/fields/Salesperson_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Email_2__c</fullName>
    <inlineHelpText>updates via workflow with salesperons email, or if that is blank then the partner email.</inlineHelpText>
    <label>Salesperson Email 2</label>
    <type>Email</type>
</CustomField>