force-app/main/default/objects/Opportunity/fields/Salesperson_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Email__c</fullName>
    <formula>IF(
 ISBLANK(BS_Sales_ID__r.Email__c)=TRUE,
 Partner_Email__c,
 BS_Sales_ID__r.Email__c
)</formula>
    <label>Salesperson Email</label>
    <type>Text</type>
</CustomField>