force-app/main/default/objects/Opportunity/fields/Scout_Payment__c.field-meta.xml
<CustomField>
    <fullName>Scout_Payment__c</fullName>
    <inlineHelpText>Commission associated with this opportunity.</inlineHelpText>
    <label>Scout Payment - Paid</label>
    <type>TextArea</type>
</CustomField>