force-app/main/default/objects/Opportunity/fields/Scout_Payment_Outstanding1__c.field-meta.xml
<CustomField>
    <fullName>Scout_Payment_Outstanding1__c</fullName>
    <inlineHelpText>Amount of Scout payment currently outstanding.</inlineHelpText>
    <label>Scout Payment Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>