force-app/main/default/objects/Opportunity/fields/Scout_Payment_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Scout_Payment_Outstanding__c</fullName>
    <label>Scout Payment Calculation</label>
    <type>TextArea</type>
</CustomField>