force-app/main/default/objects/Opportunity/fields/Scout_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Scout_Payment_Type__c</fullName>
    <label>Scout Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Retainer</fullName>
                
                
                    <label>Retainer</label>
                
                </value>
            
                <value>
                
                    <fullName>Commission</fullName>
                
                
                    <label>Commission</label>
                
                </value>
            
                <value>
                
                    <fullName>Commission and Retainer</fullName>
                
                
                    <label>Commission and Retainer</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>