force-app/main/default/objects/Opportunity/fields/Security_Type__c.field-meta.xml
<CustomField>
    <fullName>Security_Type__c</fullName>
    <description>Maps from Lead field of same name</description>
    <label>Security Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>