force-app/main/default/objects/Opportunity/fields/Send_PDF_with_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_PDF_with_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send PDF with Email</label>
    <type>Checkbox</type>
</CustomField>