force-app/main/default/objects/Opportunity/fields/Servicing_on_behalf_of__c.field-meta.xml
<CustomField>
    <fullName>Servicing_on_behalf_of__c</fullName>
    <description>This is the name of the entity that we are servicing a shared solar system on behalf of.</description>
    <formula>TEXT(Shared_Solar_System__r.Picklist__c)</formula>
    <inlineHelpText>This is the name of the entity that we are servicing a shared solar system on behalf of.</inlineHelpText>
    <label>Servicing on behalf of</label>
    <type>Text</type>
</CustomField>