force-app/main/default/objects/Opportunity/fields/Servicing_on_Behalf_oftest__c.field-meta.xml
<CustomField>
    <fullName>Servicing_on_Behalf_oftest__c</fullName>
    <description>Used for sharing rules. Do not delete, do not edit.</description>
    <inlineHelpText>Used for sharing rules. Do not delete, do not edit.</inlineHelpText>
    <label>Servicing on Behalf of text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>