force-app/main/default/objects/Opportunity/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To change this system, use the Change SSS quick action</inlineHelpText>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>