force-app/main/default/objects/Opportunity/fields/Shared_Solar_System_Name__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System_Name__c</fullName>
    <formula>Shared_Solar_System__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared Solar System Name</label>
    <type>Text</type>
</CustomField>