force-app/main/default/objects/Opportunity/fields/Shared_Solar_System_picklist__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System_picklist__c</fullName>
    <inlineHelpText>Choose the Shared Solar System you would like this Customer to be a part of. This selection tool only works if the Project Assignment Field is set to &quot;Manual&quot;.</inlineHelpText>
    <label>System List</label>
    <type>Picklist</type>
    <valueSet>
        
            <controllingField>Service_Territory__c</controllingField>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Spartanburg - Central Ave.</fullName>
                
                
                    <label>Spartanburg - Central Ave.</label>
                
                </value>
            
                <value>
                
                    <fullName>Oxford Clara Barton</fullName>
                
                
                    <label>Oxford Clara Barton</label>
                
                </value>
            
                <value>
                
                    <fullName>Fairhaven Mill Rd.</fullName>
                
                
                    <label>Fairhaven Mill Rd.</label>
                
                </value>
            
                <value>
                
                    <fullName>Oxford Barrett St. SR-1</fullName>
                
                
                    <label>Oxford Barrett St. SR-1</label>
                
                </value>
            
                <value>
                
                    <fullName>Oxford Barrett St. SR-2</fullName>
                
                
                    <label>Oxford Barrett St. SR-2</label>
                
                </value>
            
                <value>
                
                    <fullName>Oxford Barrett St. SR-3</fullName>
                
                
                    <label>Oxford Barrett St. SR-3</label>
                
                </value>
            
                <value>
                
                    <fullName>Oxford Barrett St. SR-4</fullName>
                
                
                    <label>Oxford Barrett St. SR-4</label>
                
                </value>
            
                <value>
                
                    <fullName>Oxford Barrett St. FR-2</fullName>
                
                
                    <label>Oxford Barrett St. FR-2</label>
                
                </value>
            
                <value>
                
                    <fullName>Oxford Barrett St. FR-3</fullName>
                
                
                    <label>Oxford Barrett St. FR-3</label>
                
                </value>
            
                <value>
                
                    <fullName>Oxford Barrett St. FR-4</fullName>
                
                
                    <label>Oxford Barrett St. FR-4</label>
                
                </value>
            
                <value>
                
                    <fullName>Oxford Barrett St. FR-5</fullName>
                
                
                    <label>Oxford Barrett St. FR-5</label>
                
                </value>
            
                <value>
                
                    <fullName>Oxford Barrett St. FR-6</fullName>
                
                
                    <label>Oxford Barrett St. FR-6</label>
                
                </value>
            
            </valueSetDefinition>
        
        
        
        
        
        
        
        
        
        
        
        
        
        </valueSet>
</CustomField>