force-app/main/default/objects/Opportunity/fields/Shared_System_Yield_kWh_kW__c.field-meta.xml
<CustomField>
    <fullName>Shared_System_Yield_kWh_kW__c</fullName>
    <formula>Shared_Solar_System__r.Expected_Yield_kWh_kW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared System Yield (kWh/kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>