force-app/main/default/objects/Opportunity/fields/Site_Analysis_Complete__c.field-meta.xml
<CustomField>
    <fullName>Site_Analysis_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Analysis Complete</label>
    <type>Checkbox</type>
</CustomField>