force-app/main/default/objects/Opportunity/fields/Site_Layout_Complete__c.field-meta.xml
<CustomField>
    <fullName>Site_Layout_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Layout Complete</label>
    <type>Checkbox</type>
</CustomField>