force-app/main/default/objects/Opportunity/fields/Site_Walk__c.field-meta.xml
<CustomField>
    <fullName>Site_Walk__c</fullName>
    <label>Site Walk</label>
    <type>DateTime</type>
</CustomField>