force-app/main/default/objects/Opportunity/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing State</label>
    <type>Text</type>
</CustomField>