force-app/main/default/objects/Opportunity/fields/State_ab__c.field-meta.xml
<CustomField>
    <fullName>State_ab__c</fullName>
    <label>State Abbr.</label>
    <length>5</length>
    <type>Text</type>
</CustomField>